@@ -3,7 +3,7 @@
 * login controller
 * c5authy
 * @author: Stefan Fodor
-* (C) Stefan Fodor @ 2014
+ * Built with love by Stefan Fodor @ 2014
 */
 
 defined('C5_EXECUTE') or die("Access Denied.");
