@@ -1,6 +1,7 @@
 0.89.1
 * User user Authy ID on user update
-
+* Software built with love
+*
 
 0.89
 * dashboard config page working
